--- a/nginx.conf
+++ b/nginx.conf
@@ -58,9 +58,9 @@ http {
 	# Virtual Host Configs
 	##
 
-  set_real_ip_from 0.0.0.0/0;"
-  real_ip_header X-Forwarded-For;"
-  real_ip_recursive on;"
+        set_real_ip_from 0.0.0.0/0;
+        real_ip_header X-Forwarded-For;
+        real_ip_recursive on;
 
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
